# opcua-webhmi-bridge

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  docker-entrypoint.sh  mypy.ini  opcua_webhmi_bridge.py  opcua_websocket_bridge.py  poetry_install_vars.sh  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json
.devcontainer/: .editorconfig  Dockerfile  devcontainer.json  install-tools.sh  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  codeql-analysis.yml  commitlint.yml  hooks.yml  release-please.yml  release.yml  tests.yml  vulnerability-scan.yml
certificates/: .gitignore  openssl.conf
opcua_webhmi_bridge/: __main__.py  _utils.py  config.py  frontend_messaging.py  influxdb.py  main.py  messages.py  opcua.py  pubsub.py  websocket.py
src/opcua_webhmi_bridge/: _library.py  _utils.py  config.py  frontend_messaging.py  influxdb.py  library.py  main.py  messages.py  opcua.py
tests/: conftest.py  test_centrifugo_proxy_server.py  test_cli.py  test_config.py  test_frontend_messaging_writer.py  test_influxdb.py  test_library.py  test_main.py  test_messages.py  test_opcua.py
tests/integration/: centrifugo.toml  conftest.py  docker-compose.yml  opc_server.py  requirements.txt  test_cli.py  test_frontend_messaging.py  test_influxdb.py  test_smoketests.py
tests/integration/opc_server/: Dockerfile  opc_server.py  requirements.txt
tests/unit/: conftest.py  test_centrifugo_proxy_server.py  test_config.py  test_frontend_messaging_writer.py  test_influxdb.py  test_main.py  test_messages.py  test_opcua.py
