[tool.poetry]
name = "opcua-webhmi-bridge"
version = "1.0.2"
description = "Bridge between OPC-UA server and web-based HMI"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
opcua-agent = "opcua_webhmi_bridge.main:app"

[tool.poetry.dependencies]
python = "~3.10"
asyncua = "0.9.14"
tenacity = "8.0.1"
pydantic = {extras = ["dotenv"], version = "1.8.2"}
typer = "0.4.0"
aiohttp = "==3.8.0"
yarl = "==1.7.2"
async-timeout = "4.0.0"

[tool.poetry.dev-dependencies]
black = {version = "==21.10b0", allow-prereleases = true}
flake8 = "==4.0.1"
isort = "==5.10.1"
flake8-comprehensions = "==3.7.0"
pep8-naming = "0.12.1"
flake8-bugbear = "==21.9.2"
flake8-unused-arguments = "==0.0.8"
mypy = "0.910"
pytest = "==6.2.5"
pytest-cov = "==3.0.0"
flake8-docstrings = "1.6.0"
flake8-bandit = "2.1.2"
pytest-mock = "==3.6.1"
pytest-asyncio = "==0.16.0"
pytest-httpserver = "==1.0.2"
pytest-aiohttp = "0.3.0"
types-click = "==7.1.7"
pytest-timeout = "==2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
